--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "body-parser": "^1.20.2",
     "expo": "~49.0.13",
     "expo-cli": "^6.3.10",
     "expo-status-bar": "~1.6.0",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.5",
