--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/hooks": "^3.0.0",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/material-top-tabs": "^6.6.4",
@@ -52,6 +53,7 @@
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2",
     "react-native-youtube": "^2.0.2",
     "react-navigation": "^5.0.0",
     "react-timer-hook": "^3.0.7"
