--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
+    "expo-image-picker": "^14.5.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.2",
     "nodemon": "^3.0.1"
   },
   "description": ""
