--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,13 +31,14 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-notifications": "~0.20.1",
     "expo-permissions": "~14.2.1",
-    "expo-screen-orientation": "~6.0.5",
+    "expo-screen-orientation": "~6.0.6",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "^0.72.5",
+    "react-native": "0.72.6",
     "react-native-animatable": "^1.3.3",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-coachmark": "^0.2.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -56,7 +57,8 @@
     "react-native-webview": "13.2.2",
     "react-native-youtube": "^2.0.2",
     "react-navigation": "^5.0.0",
-    "react-timer-hook": "^3.0.7"
+    "react-timer-hook": "^3.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
