--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "expo": "~49.0.13",
     "expo-cli": "^6.3.10",
     "expo-status-bar": "~1.6.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.2",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.5",
@@ -26,7 +29,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
