--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
+    "bcrypt": "^5.1.1",
     "cli-progress": "^3.12.0",
     "expo": "~49.0.13",
     "expo-av": "~13.4.1",
@@ -37,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-animatable": "^1.3.3",
+    "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-coachmark": "^0.2.0",
     "react-native-elements": "^3.4.3",
@@ -50,7 +52,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-sound": "^0.11.2",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.9.0",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
