--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/stack": "^6.3.18",
     "bcrypt": "^5.1.1",
     "cli-progress": "^3.12.0",
+    "date-fns": "^2.22.1",
     "expo": "~49.0.13",
     "expo-av": "~13.4.1",
     "expo-font": "~11.4.0",
@@ -38,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-animatable": "^1.3.3",
+    "react-native-calendars": "^1.1302.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-coachmark": "^0.2.0",
@@ -58,6 +60,7 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
     "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.3.0",
     "react-navigation": "^5.0.0",
     "react-timer-hook": "^3.0.7",
     "xlsx": "^0.18.5"
